Project

General

Profile

Actions

Bug #24269

closed

multimds pjd open test fails

Added by Zheng Yan almost 6 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
-
Category:
-
Target version:
% Done:

0%

Source:
Q/A
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS, qa-suite
Labels (FS):
multimds, qa
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

http://qa-proxy.ceph.com/teuthology/pdonnell-2018-05-23_14:53:33-multimds-wip-pdonnell-testing-20180522.181319-mimic-testing-basic-smithi/2577837/teuthology.log

tests/open/06.t:22

expect 0 -u 65534 -g 65534 chmod ${n1} 0747
expect 0 -u 65533 -g 65534 open ${n1} O_RDONLY
expect EACCES -u 65533 -g 65534 open ${n1} O_WRONLY  // failed

2018-05-24 02:30:38.277 7f87f102a700 10 client.4463 put_inode on 0x1000000021e.head(faked_ino=0 ref=5 ll_ref=19 cap_refs={} open={1=0,2=0,3=0} mode=100747 size=0/0 nlink=1 btime=0.000000 mtime=2018-05-24 02:30:28.025734 ctime=2018-05-24 02:30:38.259109 caps=pAsLsXsFscr(0=pLsXsFs,5=pAsLsXsFscr) objectset[0x1000000021e ts 0/0 objects 0 dirty_or_tx 0] parents=0x1000000021d.head["fstest_a2eda488027d6e4519e844fabd0c11d1"] 0x55ce18a9f700)
...

2018-05-24 02:30:38.277 7f87f5833700  1 -- 172.21.15.87:0/772785229 <== mds.0 172.21.15.65:6819/1312731002 4244 ==== client_caps(grant ino 0x1000000021e 1115 seq 5 caps=pLsXsFscr dirty=- wanted=pFscr follows 0 size 0/0 ts 1/18446744073709551615 mtime 2018-05-24 02:30:28.025734) v11 ==== 252+0+0 (2809344240 0 0) 0x55ce18b29680 con 0x55ce17ef8000
2018-05-24 02:30:38.277 7f87f5833700 10 client.4463  mds.0 seq now 1861
2018-05-24 02:30:38.277 7f87f5833700  5 client.4463 handle_cap_grant on in 0x1000000021e mds.0 seq 5 caps now pLsXsFscr was pLsXsFs
2018-05-24 02:30:38.277 7f87f5833700 10 client.4463 update_inode_file_bits 0x1000000021e.head(faked_ino=0 ref=4 ll_ref=19 cap_refs={} open={1=0,2=0,3=0} mode=100477 size=0/0 nlink=1 btime=0.000000 mtime=2018-05-24 02:30:28.025734 ctime=2018-05-24 02:30:38.259109 caps=pAsLsXsFscr(0=pLsXsFs,5=pAsLsXsFscr) objectset[0x1000000021e ts 0/0 objects 0 dirty_or_tx 0] parents=0x1000000021d.head["fstest_a2eda488027d6e4519e844fabd0c11d1"] 0x55ce18a9f700) pAsLsXsFscr mtime 2018-05-24 02:30:28.025734
...

2018-05-24 02:30:38.297 7f87ef827700 20 client.4463 may_open 0x1000000021e.head(faked_ino=0 ref=4 ll_ref=21 cap_refs={} open={1=0,2=0,3=0} mode=100477 size=0/0 nlink=1 btime=0.000000 mtime=2018-05-24 02:30:28.025734 ctime=2018-05-24 02:30:33.198325 caps=pAsLsXsFscr(0=pLsXsFscr,5=pAsLsXsFscr) objectset[0x1000000021e ts 0/0 objects 0 dirty_or_tx 0] parents=0x1000000021d.head["fstest_a2eda488027d6e4519e844fabd0c11d1"] 0x55ce18a9f700); UserPerm(uid: 65533, gid: 65534)
2018-05-24 02:30:38.297 7f87ef827700 10 client.4463 _getattr mask As issued=1
2018-05-24 02:30:38.297 7f87ef827700  3 client.4463 may_open 0x55ce18a9f700 = 0


looks like cap message from non-auth mds wrongly changed inode mode (0747 -> 0477)

Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #24539: mimic: multimds pjd open test failsResolvedPrashant DActions
Copied to CephFS - Backport #24540: luminous: multimds pjd open test failsResolvedZheng YanActions
Actions #1

Updated by Patrick Donnelly almost 6 years ago

  • Priority changed from Normal to Urgent
  • Target version set to v14.0.0
  • Source set to Q/A
  • Backport set to mimic,luminous
  • Component(FS) MDS, qa-suite added
  • Labels (FS) multimds, qa added
Actions #2

Updated by Zheng Yan almost 6 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Patrick Donnelly almost 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler almost 6 years ago

Actions #5

Updated by Nathan Cutler almost 6 years ago

Actions #6

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF